added support for themes

--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:container:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run relation:ownership:deploy",
-    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:container:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run relation:ownership:offline",
-    "all:test": "npm run collection:test && npm run community:test && npm run relation:container:test && npm run resource:test && npm run tag:test && npm run user:test && npm run relation:ownership:test",
+    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:container:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run relation:ownership:deploy && npm run theme:deploy",
+    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:container:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run relation:ownership:offline & npm run theme:offline",
+    "all:test": "npm run collection:test && npm run community:test && npm run relation:container:test && npm run resource:test && npm run tag:test && npm run user:test && npm run relation:ownership:test && npm run theme:test",
     "collection:deploy": "cd ./api/collection && sls deploy",
     "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "collection:test": "cd ./api/collection && mocha",
@@ -55,6 +55,9 @@
     "tag:deploy": "cd ./api/tag && sls deploy",
     "tag:offline": "cd ./api/tag && sls offline start --watch --port 3005 --skipCacheInvalidation",
     "tag:test": "cd ./api/tag && mocha",
+    "theme:deploy": "cd ./api/theme && sls deploy",
+    "theme:offline": "cd ./api/theme && sls offline start --watch --port 3016 --skipCacheInvalidation",
+    "theme:test": "cd ./api/theme && mocha",
     "user:deploy": "cd ./api/user && sls deploy",
     "user:offline": "cd ./api/user && sls offline start --watch --port 3006 --skipCacheInvalidation",
     "user:test": "cd ./api/user && mocha",
