Added search record routes.

--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:container:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run relation:ownership:deploy && npm run theme:deploy",
-    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:container:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run relation:ownership:offline & npm run theme:offline",
-    "all:test": "npm run collection:test && npm run community:test && npm run relation:container:test && npm run resource:test && npm run tag:test && npm run user:test && npm run relation:ownership:test && npm run theme:test",
+    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:container:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run relation:ownership:deploy && npm run theme:deploy && npm run search-record:deploy",
+    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:container:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run relation:ownership:offline & npm run theme:offline & npm run search-record:offline",
+    "all:test": "npm run collection:test && npm run community:test && npm run relation:container:test && npm run resource:test && npm run tag:test && npm run user:test && npm run relation:ownership:test && npm run theme:test && npm run search-record:test",
     "collection:deploy": "cd ./api/collection && sls deploy",
     "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "collection:test": "cd ./api/collection && mocha",
@@ -55,15 +55,19 @@
     "tag:deploy": "cd ./api/tag && sls deploy",
     "tag:offline": "cd ./api/tag && sls offline start --watch --port 3005 --skipCacheInvalidation",
     "tag:test": "cd ./api/tag && mocha",
+    "search-record:deploy": "cd ./api/search-record && sls deploy",
+    "search-record:offline": "cd ./api/search-record && sls offline start --watch --port 3018 --skipCacheInvalidation",
+    "search-record:test": "cd ./api/search-record && mocha",
     "theme:deploy": "cd ./api/theme && sls deploy",
-    "theme:offline": "cd ./api/theme && sls offline start --watch --port 3016 --skipCacheInvalidation",
+    "theme:offline": "cd ./api/theme && sls offline start --watch --port 3017 --skipCacheInvalidation",
     "theme:test": "cd ./api/theme && mocha",
     "user:deploy": "cd ./api/user && sls deploy",
     "user:offline": "cd ./api/user && sls offline start --watch --port 3006 --skipCacheInvalidation",
     "user:test": "cd ./api/user && mocha",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
-    "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p"
+    "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p",
+    "port:clean": "sudo fuser -k 3001/tcp 3002/tcp 3003/tcp 3004/tcp 3005/tcp 3006/tcp 3007/tcp 3008/tcp 3009/tcp 3010/tcp 3011/tcp 3012/tcp 3013/tcp 3014/tcp 3015/tcp 3016/tcp 3017/tcp 3018/tcp"
   },
   "keywords": [],
   "author": "Pascal Vautour",
