replaced put requests with patch requests to be more in line with standard restfull behaviour

--- a/code/ressource-relation-api/api/collection/serverless.yml
+++ b/code/ressource-relation-api/api/collection/serverless.yml
@@ -52,7 +52,7 @@ functions:
     events:
       - http:
           path: collections/{id}
-          method: put
+          method: patch
           cors: true
   collectionDestroy:
     handler: handler.collectionDestroy
