--- a/code/ressource-relation-api/api/community/serverless.yml
+++ b/code/ressource-relation-api/api/community/serverless.yml
@@ -52,7 +52,7 @@ functions:
     events:
       - http:
           path: communities/{id}
-          method: put
+          method: patch
           cors: true
   communityDestroy:
     handler: handler.communityDestroy
