--- a/code/ressource-relation-api/api/relation-container/community-user/serverless.yml
+++ b/code/ressource-relation-api/api/relation-container/community-user/serverless.yml
@@ -60,7 +60,7 @@ functions:
     events:
       - http:
           path: relations/containers/community/{id1}/user/{id2}
-          method: put
+          method: patch
           cors: true
     environment:
       TABLE_NAME: "CommunityUserRelation"
