--- a/code/ressource-relation-api/api/user/serverless.yml
+++ b/code/ressource-relation-api/api/user/serverless.yml
@@ -52,7 +52,7 @@ functions:
     events:
       - http:
           path: users/{id}
-          method: put
+          method: patch
           cors: true
   userDestroy:
     handler: handler.userDestroy
