--- a/code/ressource-relation-api/api/relation-ownership/user-collection/serverless.yml
+++ b/code/ressource-relation-api/api/relation-ownership/user-collection/serverless.yml
@@ -61,7 +61,7 @@ functions:
     events:
       - http:
           path: relations/ownerships/user/{id1}/collection/{id2}
-          method: put
+          method: patch
           cors: true
     environment:
       TABLE_NAME: "UserCollectionOwnershipRelation"
