--- a/code/ressource-relation-api/api/relation-ownership/user-resource/serverless.yml
+++ b/code/ressource-relation-api/api/relation-ownership/user-resource/serverless.yml
@@ -60,7 +60,7 @@ functions:
     events:
       - http:
           path: relations/ownerships/user/{id1}/resource/{id2}
-          method: put
+          method: patch
           cors: true
     environment:
       TABLE_NAME: "UserResourceOwnershipRelation"
