--- a/code/ressource-relation-api/api/resource/serverless.yml
+++ b/code/ressource-relation-api/api/resource/serverless.yml
@@ -52,7 +52,7 @@ functions:
     events:
       - http:
           path: resources/{id}
-          method: put
+          method: patch
           cors: true
   resourceDestroy:
     handler: handler.resourceDestroy
