--- a/code/ressource-relation-api/api/tag/serverless.yml
+++ b/code/ressource-relation-api/api/tag/serverless.yml
@@ -52,7 +52,7 @@ functions:
     events:
       - http:
           path: tags/{id}
-          method: put
+          method: patch
           cors: true
   tagDestroy:
     handler: handler.tagDestroy
