--- a/code/ressource-relation-api/api/docs/serverless.yml
+++ b/code/ressource-relation-api/api/docs/serverless.yml
@@ -1,4 +1,4 @@
-service: ${env:API_NAME}-doc
+service: ${env:API_NAME}-docs
 
 custom:
   dotenv:
@@ -7,6 +7,7 @@ custom:
 plugins:
   - serverless-offline
   - serverless-dotenv-plugin
+  - serverless-bundle
 
 provider:
   name: aws
