--- a/code/ressource-relation-api/api/relation-ownership/community-tag/serverless.yml
+++ b/code/ressource-relation-api/api/relation-ownership/community-tag/serverless.yml
@@ -7,6 +7,7 @@ custom:
 plugins:
   - serverless-offline
   - serverless-dotenv-plugin
+  - serverless-bundle
 
 provider:
   name: aws
@@ -26,7 +27,7 @@ package:
   individually: true
 
 functions:
-  communityTagOwnershipRelationCreate:
+  create:
     handler: ../handler.ownershipRelationCreate
     events:
       - http:
@@ -35,7 +36,7 @@ functions:
           cors: true
     environment:
       TABLE_NAME: "CommunityTagOwnershipRelation"
-  communityTagOwnershipRelationGetOne:
+  getOne:
     handler: ../handler.ownershipRelationGetOne
     events:
       - http:
@@ -46,7 +47,7 @@ functions:
       TABLE_NAME: "CommunityTagOwnershipRelation"
       FK_NAME_1: "CommunityId"
       FK_NAME_2: "TagId"
-  communityTagOwnershipRelationGetAll:
+  getAll:
     handler: ../handler.ownershipRelationGetAll
     events:
       - http:
@@ -55,7 +56,7 @@ functions:
           cors: true
     environment:
       TABLE_NAME: "CommunityTagOwnershipRelation"
-  communityTagOwnershipRelationUpdate:
+  update:
     handler: ../handler.ownershipRelationUpdate
     events:
       - http:
@@ -66,7 +67,7 @@ functions:
       TABLE_NAME: "CommunityTagOwnershipRelation"
       FK_NAME_1: "CommunityId"
       FK_NAME_2: "TagId"
-  communityTagOwnershipRelationDestroy:
+  destroy:
     handler: ../handler.ownershipRelationDestroy
     events:
       - http:
