--- a/code/ressource-relation-api/api/search-record/serverless.yml
+++ b/code/ressource-relation-api/api/search-record/serverless.yml
@@ -7,13 +7,14 @@ custom:
 plugins:
   - serverless-offline
   - serverless-dotenv-plugin
+  - serverless-bundle
 
 provider:
   name: aws
   region: ${env:REGION}
   runtime: nodejs12.x
   timeout: 30
-  ssearchRecorde: ${env:NODE_ENV}
+  stage: ${env:NODE_ENV}
   versionFunctions: false
   vpc:
     securityGroupIds:
@@ -26,36 +27,36 @@ package:
   individually: true
 
 functions:
-  searchRecordCreate:
-    handler: handler.searchRecordCreate
+  create:
+    handler: handler.create
     events:
       - http:
           path: search-records
           method: post
           cors: true
-  searchRecordGetOne:
-    handler: handler.searchRecordGetOne
+  getOne:
+    handler: handler.getOne
     events:
       - http:
           path: search-records/{id}
           method: get
           cors: true
-  searchRecordGetAll:
-    handler: handler.searchRecordGetAll
+  getAll:
+    handler: handler.getAll
     events:
       - http:
           path: search-records
           method: get
           cors: true
-  searchRecordUpdate:
-    handler: handler.searchRecordUpdate
+  update:
+    handler: handler.update
     events:
       - http:
           path: search-records/{id}
           method: patch
           cors: true
-  searchRecordDestroy:
-    handler: handler.searchRecordDestroy
+  destroy:
+    handler: handler.destroy
     events:
       - http:
           path: search-records/{id}
