--- a/code/ressource-relation-api/api/user/serverless.yml
+++ b/code/ressource-relation-api/api/user/serverless.yml
@@ -7,6 +7,7 @@ custom:
 plugins:
   - serverless-offline
   - serverless-dotenv-plugin
+  - serverless-bundle
 
 provider:
   name: aws
@@ -26,36 +27,36 @@ package:
   individually: true
 
 functions:
-  userCreate:
-    handler: handler.userCreate
+  create:
+    handler: handler.create
     events:
       - http:
           path: users
           method: post
           cors: true
-  userGetOne:
-    handler: handler.userGetOne
+  getOne:
+    handler: handler.getOne
     events:
       - http:
           path: users/{id}
           method: get
           cors: true
-  userGetAll:
-    handler: handler.userGetAll
+  getAll:
+    handler: handler.getAll
     events:
       - http:
           path: users
           method: get
           cors: true
-  userUpdate:
-    handler: handler.userUpdate
+  update:
+    handler: handler.update
     events:
       - http:
           path: users/{id}
           method: patch
           cors: true
-  userDestroy:
-    handler: handler.userDestroy
+  destroy:
+    handler: handler.destroy
     events:
       - http:
           path: users/{id}
