added routes for tag-relations and updating docs

--- a/code/resource-relation-api/package.json
+++ b/code/resource-relation-api/package.json
@@ -13,18 +13,26 @@
     "community:deploy": "cd ./api/community && sls deploy",
     "community:offline": "cd ./api/community && sls offline start --watch --port 3002 --skipCacheInvalidation",
     "community:test": "cd ./api/community && mocha",
+    "docs:deploy": "cd ./api/docs && sls deploy",
+    "docs:offline": "cd ./api/docs && sls offline start --watch --port 3019 --skipCacheInvalidation",
     "relation:container:collection-collection:deploy": "cd ./api/relation-container/collection-collection && sls deploy",
     "relation:container:collection-collection:offline": "cd ./api/relation-container/collection-collection && sls offline start --watch --port 3014 --skipCacheInvalidation",
     "relation:container:collection-collection:test": "cd ./api/relation-container/collection-collection && mocha",
-    "relation:container:collection-resource:deploy": "cd ./api/relation-container/collection-resource && sls deploy",
+    "relation:container:tag-collection:deploy": "cd ./api/relation-container/collection-collection && sls deploy",
+    "relation:container:tag-collection:offline": "cd ./api/relation-container/tag-collection && sls offline start --watch --port 3020 --skipCacheInvalidation",
+    "relation:container:tag-collection:test": "cd ./api/relation-container/tag-collection && mocha",
+    "relation:container:tag-resource:deploy": "cd ./api/relation-container/tag-resource && sls deploy",
+    "relation:container:tag-resource:offline": "cd ./api/relation-container/tag-resource && sls offline start --watch --port 3021 --skipCacheInvalidation",
+    "relation:container:tag-resource:test": "cd ./api/relation-container/tag-resource && mocha",
+    "relation:container:collection-resource:deploy": "cd ./api/relation-container/tag-resource && sls deploy",
     "relation:container:collection-resource:offline": "cd ./api/relation-container/collection-resource && sls offline start --watch --port 3003 --skipCacheInvalidation",
     "relation:container:collection-resource:test": "cd ./api/relation-container/collection-resource && mocha",
     "relation:container:community-user:deploy": "cd ./api/relation-container/community-user && sls deploy",
     "relation:container:community-user:offline": "cd ./api/relation-container/community-user && sls offline start --watch --port 3015 --skipCacheInvalidation",
     "relation:container:community-user:test": "cd ./api/relation-container/community-user && mocha",
-    "relation:container:deploy": "npm run relation:container:collection-resource:deploy && npm run relation:container:collection-collection:deploy && npm run relation:container:community-user:deploy",
-    "relation:container:offline": "npm run relation:container:collection-resource:offline & npm run relation:container:collection-collection:offline & npm run relation:container:community-user:offline",
-    "relation:container:test": "npm run relation:container:collection-resource:test && npm run relation:container:collection-collection:test && npm run relation:container:community-user:test",
+    "relation:container:deploy": "npm run relation:container:collection-resource:deploy && npm run relation:container:collection-collection:deploy && npm run relation:container:community-user:deploy && npm run relation:container:tag-collection:deploy && npm run relation:container:tag-resource:deploy",
+    "relation:container:offline": "npm run relation:container:collection-resource:offline & npm run relation:container:collection-collection:offline & npm run relation:container:community-user:offline & npm run relation:container:tag-collection:offline & npm run relation:container:tag-resource:offline",
+    "relation:container:test": "npm run relation:container:collection-resource:test && npm run relation:container:collection-collection:test && npm run relation:container:community-user:test && npm run relation:container:tag-collection:test && npm run relation:container:tag-resource:test",
     "relation:ownership:community-collection:deploy": "cd ./api/relation-ownership/community-collection && sls deploy",
     "relation:ownership:community-collection:offline": "cd ./api/relation-ownership/community-collection && sls offline start --watch --port 3007 --skipCacheInvalidation",
     "relation:ownership:community-collection:test": "cd ./api/relation-ownership/community-collection && mocha",
@@ -67,7 +75,7 @@
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
     "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p",
-    "port:clean": "sudo fuser -k 3001/tcp 3002/tcp 3003/tcp 3004/tcp 3005/tcp 3006/tcp 3007/tcp 3008/tcp 3009/tcp 3010/tcp 3011/tcp 3012/tcp 3013/tcp 3014/tcp 3015/tcp 3016/tcp 3017/tcp 3018/tcp"
+    "port:clean": "sudo fuser -k 3001/tcp 3002/tcp 3003/tcp 3004/tcp 3005/tcp 3006/tcp 3007/tcp 3008/tcp 3009/tcp 3010/tcp 3011/tcp 3012/tcp 3013/tcp 3014/tcp 3015/tcp 3016/tcp 3017/tcp 3018/tcp 3019/tcp 3020/tcp 3021/tcp"
   },
   "keywords": [],
   "author": "Pascal Vautour",
