--- a/code/resource-relation-api/api/relation-container/tag-resource/serverless.yml
+++ b/code/resource-relation-api/api/relation-container/tag-resource/serverless.yml
@@ -14,6 +14,7 @@ provider:
   profile: ${env:AWS_PROFILE}
   region: ${env:REGION}
   runtime: nodejs12.x
+  timeout: 30
   stage: ${env:NODE_ENV}
   versionFunctions: false
   vpc:
