--- a/code/resource-relation-api/api/relation-ownership/user-community/serverless.yml
+++ b/code/resource-relation-api/api/relation-ownership/user-community/serverless.yml
@@ -13,7 +13,7 @@ provider:
   name: aws
   region: ${env:REGION}
   runtime: nodejs12.x
-
+  timeout: 30
   stage: ${env:NODE_ENV}
   versionFunctions: false
   vpc:
